# my_personal_butler

./: .env.example  Cargo.toml  README.md
src/: app.rs  client.rs  config.rs  main.rs  models.rs  utils.rs
