[package]
name = "ai_butler"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.29.0"
dirs = "6.0.0"
dotenv = "0.15.0"
ratatui = "0.30.0"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
tui-input = "0.15.0"
